# xCAD

./: .deepsource.toml  .gitignore  .ruff.toml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Cargo.toml  MANIFEST.in  NOTES.txt  README.md  SECURITY.md  Trunk.toml  bricscad_utils.lsp  docker-compose.yaml  dockerfile  dump.py  git_bash_cmds.txt  install_script.py  installation_script  mkdocs.yml  plugin_directory_finder.py  pyproject.toml  requirements.txt  settings.db  setup.bat  setup.cfg  setup.ps1  setup.py  setup_project.py  setup_venv.py  test.ifc  test.py  venv.bat  venv.py
.devcontainer/: .LinuxOS.env  (+7 more)
libs/BRXSDK_Bcad_V23_2_03/samples/brxSample/: CMakeLists.txt  Sample.cbp
libs/BRXSDK_Bcad_V23_2_03/samples/brxSample/Sample.xcworkspace/xcshareddata/: Sample.xcscmblueprint
libs/BRXSDK_Bcad_V23_2_03/samples/brxSample/dbx/: MyOPMExtension.cpp  MyOPMExtension.h
libs/BRXSDK_Bcad_V23_2_03/samples/brxSample/gui/: MyRibbonContent.h
xcad/: Cargo.toml  __config__.py  acrxEntryPoint.cpp  ui.py
xcad/libs/brx/inc/: AcDbAssocManager.h  AcDbClassIter.h  AcDbGeomRef.h  AcDbPointCloudColorMap.h  AcFileDepMgr.h  AcPlPlotErrorHandlerLock.h  AcPointCloudExtractor.h  AdAChar.h  DbLinkedTableData.h  DbSection.h  _CompileSdkHeader.c  aNav.h  acarray.h  acpi.h  acplmisc.h  acpublishreactors.h  acssgetfilter.h  acuiEdit.h  acuiNavDialog.h  acuiPathname.h  aduiDialog.h  aduiFileDialog.h  aduiGroupCtrl.h  aduiPathname.h  arxHeaders.h  axobjref.h  dbInterferencePE.h  dbJoinEntityPE.h  dbObjectContextCollection.h  dbSun.h  dbentityoverrule.h  dbmline.h  dbspfilt.h  dbtrans.h  gePlane.h  gecsint.h  gedxfio.h  geell3d.h  gemat3d.h  geoffc2d.h  (+7 more)
xcad/libs/brx/inc/AcAx/: AcAxMatrix3d.h  AcAxPoint2d.h
xcad/libs/brx/inc/AcDb/: AcDb2dVertex.h  AcDbAlignment.h  AcDbAssocActionBody.h  AcDbAssocNetwork.h  AcDbAssocPersSubentId.h  AcDbAttributeDefinition.h  AcDbBlockEnd.h  AcDbBreakPointRef.h  AcDbCompositeFilteredBlockIterator.h  AcDbDataLinkManager.h  AcDbDimensionStyleOverrule.h  AcDbDynamicUCSPE.h  AcDbEdgeRef.h  AcDbEvalEdgeInfo.h  AcDbExtents.h  AcDbFaceRef.h  AcDbFullSubentPath.h  AcDbGeoCoordinateSystemTransformer.h  AcDbGeometryOverrule.h  AcDbGlobal.h  AcDbGraphNode.h  AcDbHyperlink.h  AcDbLayerIndexIterator.h  AcDbLayerStateManager.h  AcDbLinkedTableData.h  AcDbLoftedSurface.h  AcDbLongTransWorkSetIterator.h  AcDbObject.h  AcDbObjectContextInterface.h  AcDbPasswordedFile.h  AcDbPlaneSurface.h  AcDbPolyFaceMesh.h  AcDbRadialDimension.h  AcDbRasterImageDefTransReactor.h  AcDbRay.h  AcDbRecover.h  AcDbSymbolTableIterator.h  AcDbSymbolTableRecord.h  AcDbViewTableIterator.h  AcDbVisualStyle.h  (+3 more)
xcad/libs/brx/inc/AcEd/: AcEdCommandStack.h  AcEdInputPoint.h  AcEdSelectionSetService.h  AcEdServices.h
xcad/libs/brx/inc/AcFd/: AcFdFieldEngine.h  AcFdFieldEvaluator.h  AcFdFieldReactor.h
xcad/libs/brx/inc/AcGe/: AcGeBoundBlock3d.h  AcGeCylinder.h  AcGeExternalCurve2d.h  AcGeInterval.h  AcGeLinearEnt2d.h  AcGeMatrix3d.h  AcGeNurbCurve2d.h  AcGePointOnCurve2d.h  AcGePointOnSurface.h  AcGeScale3d.h  AcGeSphere.h  AcGeTol.h  AcGeVector2d.h
xcad/libs/brx/inc/AcGi/: AcGiGradientBackgroundTraits.h  AcGiImage.h  AcGiKernelDescriptor.h  AcGiLinetypeEngine.h  AcGiMaterialMap.h  AcGiRequestScanLines.h  AcGiSentScanLines.h  AcGiVariant.h  AcGiVisualStyle.h
xcad/libs/brx/inc/AcGs/: AcGsColor.h  AcGsReactor.h  AcGsRenderStatistics.h
xcad/libs/brx/inc/AcPl/: AcPlGlobal.h  AcPlPlotConfig.h  AcPlPlotConfigManager.h  AcPlPlotProgress.h
xcad/libs/brx/inc/AcPubl/: AcPublishAggregationInfo.h
xcad/libs/brx/inc/AcRx/: AcRxDLinkerReactor.h  AcRxGlobal.h  AcRxVariable.h
xcad/libs/brx/inc/BrxSpecific/: AcBillOfMaterials.h  AcGiImageData.h
xcad/libs/brx/inc/BrxSpecific/civil/: BrxCvDbTinSurface.h
xcad/libs/brx/inc/BrxSpecific/dbcompare/: CustomEntityExample.txds
xcad/libs/brx/inc/BrxSpecific/ribbon/: AcRibbonControl.h  AcRibbonReactorMgr.h  AcRibbonServices.h
xcad/libs/brx/inc/COM/: CProxy_PropertyNotifySink.h  IAcadBaseDatabase.h
xcad/libs/brx/inc/DMM/: AcDMMEPlotProperty.h  AcDMMEntityReactorInfo.h
xcad/libs/brx/inc/MFC/CAcUi/: CAcUiDialog.h  CAcUiDropSite.h  CAcUiEdit.h  CAcUiOwnerDrawButton.h
xcad/libs/brx/inc/MFC/CAdUi/: CAdUiBaseDialog.h  CAdUiDockFrame.h  CAdUiGroupCtrl.h  CAdUiHPFSVolumeDescriptor.h  CAdUiListBox.h  CAdUiOwnerDrawButton.h  CAdUiPaletteSet.h  CAdUiTheme.h
xcad/libs/brx/inc/MFC/CNav/: CNavDialog.h  CNavFilterArray.h  CNavListCtrl.h
xcad/libs/brx/inc/Misc/: AcChildFrmSettings.h  AcIfstream.h  ClipboardInfo.h
xcad/libs/brx/inc/Platform/: sys_headers.h
xcad/libs/brx/inc/Platform/atl/: atl_classes.h
xcad/libs/brx/inc/Platform/com/: CComObjectRootEx.h  COleDispatchDriver.h  IUnknown.h  SafeArray.h  com_bstr.h
xcad/libs/brx/inc/PropertyPalette/: OPMPropertyExtensionFactory.h
xcad/libs/brx/inc64/: axbricscadapp1.tlb
xcad/libs/brx/lib64/: BrxMgd.lib
xcad/libs/brx/samples/CMyManagedEntity/: CMyManagedEntity.sln  READMEbcad.txt
xcad/libs/brx/samples/CsBrxMgd/: CsBrxMgd.sln
xcad/libs/brx/samples/CsBrxMgdCivil/: CsBrxMgdCivil.sln
xcad/libs/brx/samples/VbBrxMgd/: VbBrxMgd.sln
xcad/libs/brx/samples/brxBimSample/: BimIfcExport.h  BimIfcImport.h  BimSample24.vcxproj  brx_version.h
xcad/libs/brx/samples/brxCivilSample/: CivilSample.cpp  CivilSample.rc  LinuxBuild.txt  acrxEntryPoint.cpp  civil_utils.h
xcad/libs/brx/samples/brxSample/: LinuxBuild.txt  Sample.rc  compileHelp.txt
xcad/libs/brx/samples/brxWxSample/: Sample.sln  acrxEntryPoint.cpp
xcad/src/: app.rs  auth.rs  bim.rs  database.rs  db.rs  lib.rs  main.rs  server.rs
xcad/static/: index.html
xcad/styles/: __init__.py  dark.qss  palette.py
xcad/stylesheets/: light.py
(+12796 files in other folders)
