[metadata]
name = BricsCad
version = 0.0.1

long_description = file: README.md
long_description_content_type = text/markdown
license = Proprietary
url = https://github.com/IllyriusQ/BricsCAD-plugin
project_urls =
    Bug Tracker = https://github.com/IllyriusQ/BricsCAD-plugin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Proprietary License
    Operating System :: OS Independent


[options]
install_requires = 
    PySide6
    Cython


packages = find:
python_requires = >=3.9


[options.entry_points]
console_scripts =
    brics = bbc.main:run

