[metadata]
name = HSBConfig
version = 0.0.1

long_description = file: README.md
long_description_content_type = text/markdown
license = Proprietary
url = https://github.com/IllyriusQ/HSBConfig
project_urls =
    Bug Tracker = https://github.com/IllyriusQ/HSBConfig/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Proprietary License
    Operating System :: OS Independent


[options]
install_requires = 
    openpyxl


packages = find:
python_requires = >=3.9


