[metadata]
name = AutoFrameCad
version = 0.0.1

long_description = file: README.md
long_description_content_type = text/markdown
license = LICENSE.md
url = https://github.com/Illyrius666/AutoFrameCad
project_urls =
    Bug Tracker = https://github.com/Illyrius666/AutoFrameCad/issues

[options]
install_requires = 
    ezdxf
    numpy
    PySide6
    pyqtdarktheme

packages = find:
python_requires = >=3.11.5

[options.entry_points]
console_scripts =
    afc = src.main:run

