[package]
name = "xcad"
version = "1.0.0"
edition = "2021"
authors = ["XodiumSoftware <https://xodium.org/>"]
description = "CAD addon/plug-in providing automative tools."
license = "AGPL-3.0"
repository = "https://github.com/XodiumSoftware/xCAD"
keywords = ["Produce at lightspeed"]
categories = ["development-tools::bindings", "asynchronous"]
homepage = "https://xodium.org/"
documentation = "https://wiki.xodium.org/xCAD"
publish = false

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
eframe = { version = "0.28.1", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
serde = { version = "1.0.210", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
