[package]
name = "xcad"
version = "0.2.0"
edition = "2021"
authors = ["XodiumSoftware <https://xodium.org/>"]
description = "CAD addon/plug-in providing automative tools."
license = "AGPL-3.0"
repository = "https://github.com/XodiumSoftware/xCAD"
keywords = ["Produce at lightspeed"]
categories = ["development-tools::bindings", "asynchronous"]
homepage = "https://xodium.org/"
documentation = "https://wiki.xodium.org/xCAD"
publish = false

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
eframe = { version = "0.28.1", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
egui_extras = "0.28.1"
serde = "1.0.210"
rusqlite = "0.26.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"
